@@ -1,3 +1,12 @@
+#define TP_META_BEGIN(self,name) \
+    if (self.dict.dtype && self.dict.val->meta.type != TP_NONE) { \
+        int n = _tp_dict_find(tp,self.dict.val->meta.dict.val,tp_string(name)); \
+        if (n != -1) { \
+            tp_obj meta = self.dict.val->meta.dict.val->items[n].val;
+
+#define TP_META_END \
+        } \
+    }
 
 tp_obj tp_str(TP,tp_obj self) {
     int type = self.type;
@@ -65,10 +74,14 @@ tp_obj tp_iter(TP,tp_obj self, tp_obj k) {
     tp_raise(tp_None,"tp_iter(%s,%s)",TP_CSTR(self),TP_CSTR(k));
 }
 
+
 tp_obj tp_get(TP,tp_obj self, tp_obj k) {
     int type = self.type;
     tp_obj r;
     if (type == TP_DICT) {
+        TP_META_BEGIN(self,"__get__");
+            tp_obj p[] = {self,k}; return _tp_call(tp,meta,tp_list_n(tp,2,p));
+        TP_META_END;
         return _tp_dict_get(tp,self.dict.val,k,"tp_get");
     } else if (type == TP_LIST) {
         if (k.type == TP_NUMBER) {
@@ -162,6 +175,9 @@ void tp_set(TP,tp_obj self, tp_obj k, tp_obj v) {
     int type = self.type;
 
     if (type == TP_DICT) {
+        TP_META_BEGIN(self,"__set__");
+            tp_obj p[] = {self,k,v}; _tp_call(tp,meta,tp_list_n(tp,3,p)); return;
+        TP_META_END;
         _tp_dict_set(tp,self.dict.val,k,v);
         return;
     } else if (type == TP_LIST) {
